--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
     <header>
       <h1>Quiz App</h1>
     </header>
+    <main>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What is the capital of France?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer hidden">
+          <p>Answer: Paris</p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
