add quizcards buttons

--- a/index.html
+++ b/index.html
@@ -13,11 +13,56 @@
     <main>
       <section class="card">
         <article class="question">
-          <p>Question 1: What is the capital of France?</p>
+          <p>Question 1: What property flips the axes in flexbox?</p>
           <button class="toggle-answer">Show Answer</button>
         </article>
-        <article class="answer hidden">
-          <p>Answer: Paris</p>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
+        </article>
+      </section>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What property flips the axes in flexbox?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
+        </article>
+      </section>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What property flips the axes in flexbox?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
+        </article>
+      </section>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What property flips the axes in flexbox?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
+        </article>
+      </section>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What property flips the axes in flexbox?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
+        </article>
+      </section>
+      <section class="card">
+        <article class="question">
+          <p>Question 1: What property flips the axes in flexbox?</p>
+          <button class="toggle-answer">Show Answer</button>
+        </article>
+        <article class="answer">
+          <p>Answer: flex-direction</p>
         </article>
       </section>
     </main>
