add html for nav bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/5357ab5bd8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -66,5 +70,16 @@
         </article>
       </section>
     </main>
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li><a href="#">Menu Point 2</a></li>
+          <li><a href="#">Menu Point 3</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
