add style to navbar

--- a/index.html
+++ b/index.html
@@ -70,14 +70,21 @@
         </article>
       </section>
     </main>
-    <footer>
-      <nav>
-        <ul>
-          <li>
-            <a href="">Home</a>
+    <footer class="footer">
+      <nav class="nav">
+        <ul class="list">
+          <li class="menu-item">
+            <i class="icon fa-solid fa-house"></i
+            ><a class="link" href="#">Home</a>
           </li>
-          <li><a href="#">Menu Point 2</a></li>
-          <li><a href="#">Menu Point 3</a></li>
+          <li class="menu-item">
+            <i class="icon fa-solid fa-bookmark"></i
+            ><a class="link" href="#">Bookmarks</a>
+          </li>
+          <li class="menu-item">
+            <i class="icon fa-solid fa-user"></i
+            ><a class="link" href="#">Profile</a>
+          </li>
         </ul>
       </nav>
     </footer>
